--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
-    "puppeteer": "^21.7.0",
-    "puppeteer-core": "^21.7.0"
+    "puppeteer": "^19.7.2"
   }
 }
