--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "test2",
+  "name": "puppeteer-render",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^3.0.2",
     "puppeteer": "^19.7.2"
   }
 }
