--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "puppeteer": "^19.7.2",
-    "cors": "^2.8.5"
+    "puppeteer": "^19.7.2"
   }
 }
