--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.1.4",
-    "puppeteer": "^19.11.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-adblocker": "^2.13.6"
+    "puppeteer": "^19.11.1"
   }
 }
